feat: upload model

--- a/env.yaml
+++ b/env.yaml
@@ -183,4 +183,5 @@ dependencies:
       - typing-extensions==4.13.2
       - typing-inspection==0.4.1
       - wandb==0.19.11
+      - huggingface_hub
 
