--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,14 @@
-# Generated from env.yaml
-# Note: System libraries and meta-packages were filtered out to ensure pip compatibility.
+# Pruned requirements.txt based on usage in train_wo_feat.py and train_w_feat_small.py
+# Only essential packages are kept with their original versions.
 
-bottleneck==1.3.7
-brotli-python==1.0.9
-certifi==2025.4.26
-charset-normalizer==3.3.2
-contourpy==1.2.0
-cycler==0.11.0
+torch==2.2.2
 dgl==2.4.0
-filelock==3.13.1
-fonttools==4.51.0
-fsspec==2025.5.1
-gmpy2==2.1.2
-idna==3.7
-jinja2==3.1.4
-joblib==1.4.2
-kiwisolver==1.4.4
-markupsafe==2.1.3
-matplotlib==3.9.2
-mkl==2023.1.0
-mkl-service==2.4.0
-mkl_fft==1.3.10
-mkl_random==1.2.7
-mpmath==1.3.0
-networkx==3.2.1
-numexpr==2.8.7
 numpy==1.26.4
 ogb==1.3.6
-outdated==0.2.2
-packaging==24.1
-pandas==2.2.2
-pillow==10.4.0
-ply==3.11
-psutil==5.9.0
-pyparsing==3.1.2
-pyqt==5.15.10
-pyqt5-sip==12.13.0
-pysocks==1.7.1
-python-dateutil==2.9.0post0
-python-tzdata==2023.3
-torch==2.2.2
-pytz==2024.1
-pyyaml==6.0.2
-requests==2.32.3
-scikit-learn==1.5.1
-scipy==1.13.1
-setuptools==75.1.0
-sip==6.7.12
-six==1.16.0
-sympy==1.13.2
-threadpoolctl==3.5.0
-tomli==2.0.1
-torchaudio==2.2.2
-torchvision==0.17.2
-tornado==6.4.1
-tqdm==4.66.5
-tzdata==2024b
-unicodedata2==15.1.0
-urllib3==2.2.3
-wheel==0.44.0
-
-# Pip dependencies
-annotated-types==0.7.0
-click==8.2.1
-docker-pycreds==0.4.0
-gitdb==4.0.12
-gitpython==3.1.44
-platformdirs==4.3.8
-protobuf==6.31.1
-pydantic==2.11.5
-pydantic-core==2.33.2
-sentry-sdk==2.29.1
-setproctitle==1.3.6
-smmap==5.0.2
-typing-extensions==4.13.2
-typing-inspection==0.4.1
 wandb==0.19.11
+matplotlib==3.9.2
+tqdm==4.66.5
+scipy==1.13.1
 huggingface_hub
 matplotlib-inline
 ipython
